# BeEngine

./: .gitignore  CMakeLists.txt  build.bat  clean.bat  run.bat
Doc/Diagrams/: .$ActivityDiagram.drawio.bkp  ActivityDiagram.drawio
Resources/: CMakeLists.txt
Source/: CMakeLists.txt  main.cpp
Source/Application/: CMakeLists.txt  main.cpp
Source/Application/Views/: CHomeUI.cpp  CHomeUI.h  COptionUI.cpp  COptionUI.h  CWorldUI.cpp  CWorldUI.h
Source/Audio/: CAudio.cpp  CAudio.h  CMakeLists.txt
Source/Core/: CMakeLists.txt  CObject.cpp  CObject.h
Source/Core/DataStruct/: ALinkedList.h  CDoublyLinkedList.cpp  CDoublyLinkedList.h  CGrid.h  CHash.h  CHashTable.h  CIterator.h  CSinglyLinkedList.cpp  CSinglyLinkedList.h  ILinkedList.h  SNode.h
Source/Core/Math/: CMatrix2D.h  CVector2D.h
Source/Core/Memory/: AAllocator.h  CHeapAllocator.cpp  CHeapAllocator.h  CMemoryManager.cpp  CMemoryManager.h  CObjWrapper.h  CPoolAllocator.cpp  CPoolAllocator.h  CStackAllocator.cpp  CStackAllocator.h  IAllocator.h  StackAllocator.cpp
Source/Core/Notify/: CNotifyDispatcher.cpp  CNotifyDispatcher.h  CSignal.h  CSignalPool.cpp  CSignalPool.h  IObserver.h
Source/Core/PoolSignals/: ASignalReceiver.cpp  ASignalReceiver.h  CPoolSignals.cpp  CPoolSignals.h  CSignalDispatcher.cpp  CSignalDispatcher.h
Source/Core/Time/: CTimer.cpp  CTimer.h  Timer.h
Source/ECS/: Alias.h  CMakeLists.txt
Source/ECS/Component/: CComponent.cpp  CComponent.h  CComponentManager.cpp  CComponentManager.h
Source/ECS/Component/ComponentDef/: SBoxComponent.h  SCameraComponent.h  SHealthComponent.h  SKeyInputComponent.h  SMotionComponent.h  SPositionComponent.h  SSpriteComponent.h
Source/ECS/Entity/: CEntity.cpp  CEntity.h  CEntityManager.cpp  CEntityManager.h
Source/ECS/Systems/: AECSystem.h  CECSystemManager.cpp  CECSystemManager.h
Source/ECS/Systems/CameraSystem/: CCameraSystem.cpp  CCameraSystem.h
Source/ECS/Systems/CollisionSystem/: CCollisionSystem.cpp  CCollisionSystem.h
Source/ECS/Systems/KeyInputSystem/: CKeyInputSystem.cpp  CKeyInputSystem.h
Source/ECS/Systems/MotionSystem/: CMotionSystem.cpp  CMotionSystem.h
Source/ECS/Systems/MovementSystem/: CMovementSystem.cpp  CMovementSystem.h
Source/ECS/Systems/SpawnSystem/: CSpawnSystem.cpp  CSpawnSystem.h
Source/ECS/Systems/SpriteSystem/: CSpriteSystem.cpp  CSpriteSystem.h
Source/Engine/: CEngine.cpp  CEngine.h  CEngine2D.cpp  CEngine2D.h  CMakeLists.txt
Source/Graphics/: APainter.h  ARenderer.h  ATexturePool.h  C2DPainter.cpp  C2DPainter.h  C3DPainter.cpp  C3DPainter.h  CMakeLists.txt  CPainter.cpp  CPainter.h  CRenderer.cpp  CRenderer.h  CRenderer2D.cpp  CRenderer2D.h  CRenderer3D.cpp  CRenderer3D.h  CTexture2DManager.cpp  CTexture2DManager.h  CTexture2DPool.cpp  CTexture2DPool.h  CTexture3DPool.cpp  CTexture3DPool.h  CTextureManager.cpp  CTextureManager.h  CTexturePool.cpp  CTexturePool.h
Source/Graphics/Widgets/: AWindow.cpp  AWindow.h  CApplication.cpp  CApplication.h  CButton.cpp  CButton.h  CImage.cpp  CImage.h  CKeyEvent.cpp  CKeyEvent.h  CLayer.cpp  CLayer.h  CMouseArea.cpp  CMouseArea.h  CRectangle.cpp  CRectangle.h  CSDLWindow.cpp  CSDLWindow.h  CText.cpp  CText.h  CWidget.cpp  CWidget.h  CWindow.cpp  CWindow.h
Source/Input/: CEventDispatcher.cpp  CEventDispatcher.h  CEventReceiver.cpp  CEventReceiver.h  CMakeLists.txt
Source/Net/: CMakeLists.txt
Source/SceneGraph/: CMakeLists.txt
Source/Utils/: CMakeLists.txt  Utils.h  UtilsDefines.h
Source/Utils/Logger/: CLogger.cpp  CLogger.h  LoggerDefines.h  LoggerEnums.h
Source/Utils/Parsers/JsonParser/: CJsonParser.cpp  CJsonParser.h
Source/Utils/Parsers/TilemapParser/: CTilemapParser.cpp  CTilemapParser.h  TmxFormat.h
Source/Utils/Parsers/XMLParser/: CXmlParser.cpp  CXmlParser.h
